# varret-pm10-paper

./: .gitignore  AUDIT_REPORT.md  AUDIT_SUMMARY.md  CITATION.cff  IMPLEMENTATION_NOTES.md  LICENSE  Makefile  PIPELINE_REPORT.md  README.md  codex_experiment_plan_atm_research.txt  figure_skill_alpha_five_models_caption.txt  model_family_diagnostic_summary.md  model_family_diagnostic_summary.tex  overleaf_superprompt_update_17stations.txt  paper_a.tex  paper_b_predictability_bound.tex  prisma_reporting_audit_summary.tex  pyproject.toml  references.bib  requirements-ci.txt  requirements-reproduction.txt  requirements.txt  run_paper_a.sh  run_paper_a_fixed.sh  run_paper_a_no_lstm.sh  skill_alpha_quadrant_counts.csv  supplementary_material.tex  test_cota_teorica_skill.py
config/: config.yaml  default_config.yaml  horizons.yaml  thresholds.yaml
data/: miteco_inventory.csv  miteco_selected.csv
docs/: data_dictionary.md  data_download.md  e1_rr_post_evaluation_contract.md  editorial_positioning.md  editorial_review_report.md  empirical_reproducibility_audit.md  figure_table_traceability.md  manuscript_change_log.md  manuscript_real_data_patch.md  overleaf_superprompt.md  protocol.md  q1_closeout_decisions.md  q1_execution_plan.md  reference_audit.md  regime_analysis.md  run_order.md  runbook.md  submission_readiness_checklist.md
outputs/: README_figures_tables.md
results/: horizon_breakdown_kge.csv  kge_components_summary.csv  kge_horizon_table.csv  kge_interpretation.md  kge_robustness_closure.md  rank_correlation_kge_phi.csv  rank_reversal_summary.csv  (+3 more)
(+230 files in other folders)
